--- a/about.html
+++ b/about.html
@@ -1219,10 +1219,10 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a class="active-about" href="about.html">About</a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#doctors">Doctors</a></li>
-              <li><a href="#research">Research</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="doctors.html">Doctors</a></li>
+              <li><a href="appointment.html">Appointment</a></li>
+              <li><a href="contact.html">Contact</a></li>
               <li><a href="#" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
