--- a/doctor.html
+++ b/doctor.html
@@ -1566,7 +1566,7 @@
               <li><a class="active-doctors" href="doctors.html">Doctors</a></li>
               <li><a href="appointment.html">Appointment</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="#" class="btn-primary">Patient Portal</a></li>
+              <li><a href="patient-portal.html" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
         </div>
