--- a/contact.html
+++ b/contact.html
@@ -1614,7 +1614,7 @@
               <li><a href="doctors.html">Doctors</a></li>
               <li><a href="appointment.html">Appointment</a></li>
               <li><a class="active-contact" href="contact.html">Contact</a></li>
-              <li><a href="#" class="btn-primary">Patient Portal</a></li>
+              <li><a href="patient-portal.html" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
         </div>
