--- a/services.html
+++ b/services.html
@@ -1386,7 +1386,7 @@
               <li><a href="doctor.html">Doctors</a></li>
               <li><a href="appointment.html">Appointment</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="#" class="btn-primary">Patient Portal</a></li>
+              <li><a href="patient-portal.html" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
         </div>
