--- a/appointment.html
+++ b/appointment.html
@@ -1814,7 +1814,7 @@
               <li><a href="doctors.html">Doctors</a></li>
               <li><a class="active-appointment" href="appointment.html">Appointment</a></li>
               <li><a href="contact.html">Contact</a></li>
-               <li><a href="#" class="btn-primary">Patient Portal</a></li>
+               <li><a href="auth.html" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
         </div>
