--- a/index.html
+++ b/index.html
@@ -2830,7 +2830,7 @@
               <li><a href="doctors.html">Doctors</a></li>
               <li><a href="appointment.html">Appointment</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="patient-portal.html" class="btn-primary">Patient Portal</a></li>
+              <li><a href="auth.html" class="btn-primary">Patient Portal</a></li>
             </ul>
           </div>
         </div>
